syntax = "proto3";

package proto;

option go_package = ".;proto";

message MovieSearchRequest {
	string keyword = 1;
	int32 page = 2;
}

message MovieSearchResponseDataSearch {
    string title = 1;
    string year = 2;
    string imdb_id = 3;
    string type = 4;
    string poster = 5;
}

message MovieSearchResponseData {
    repeated MovieSearchResponseDataSearch search = 1;
    string total_results = 2;
    string response = 3;
    string error = 4;
}

message MovieSearchResponse {
    MovieSearchResponseData data = 1;
    string error = 2;
}

message MovieDetailRequest {
	string id = 1;
}

message MovieDetailResponseDataRating {
    string source = 1;
    string value = 2;
}

message MovieDetailResponseData {
    string title = 1;
    string year = 2;
    string rated = 3;
    string released = 4;
    string runtime = 5;
    string genre = 6;
    string director = 7;
    string writer = 8;
    string actors = 9;
    string plot = 10;
    string language = 11;
    string country = 12;
    string awards = 13;
    string poster = 14;
    repeated MovieDetailResponseDataRating ratings = 15;
    string metascore = 16;
    string imdb_rating = 17;
    string imdb_votes = 18;
    string imdb_id = 19;
    string type = 20;
    string dvd = 21;
    string box_office = 22;
    string production = 23;
    string website = 24;
    string response = 25;
    string error = 26;
}

message MovieDetailResponse {
    MovieDetailResponseData data = 1;
    string error = 2;
}

service OMDB {
	rpc MovieSearch(MovieSearchRequest) returns (MovieSearchResponse) {}
	rpc MovieDetail(MovieDetailRequest) returns (MovieDetailResponse) {}
}
